<resources>
    <string name="app_name">Innovacer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="visitor_name">Visitor Name</string>
    <string name="host_email">Host Email</string>
    <string name="visitor_email">Visitor Email</string>
    <string name="visitor_mobile_number">Visitor Mobile Number</string>
    <string name="host_name">Host Name</string>
    <string name="host_mobile_number">Host Mobile Number</string>
    <string name="host_address">Host Address</string>
    <string name="visitor_information">Visitor Information</string>
    <string name="host_information">Host Information</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="history">History</string>
    <string name="current_visitors">Current Visitors</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
