<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/inn"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visitor_information"
            android:textSize="25sp"
            android:textAlignment="center"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/visitor_name"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintText"
            android:id="@+id/vEmail_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/visitor_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintText"
            android:id="@+id/vMobile_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/visitor_mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/host_information"
            android:textSize="25sp"
            android:textAlignment="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/host_name" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintText"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/host_address"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintText"
            android:id="@+id/hEmail_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/host_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/HintText"
            android:id="@+id/hMobile_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/host_mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
    </LinearLayout>
</ScrollView>